# kemeny-evaluation

./: algorithms.py  approx_benchmark_runtime.py  approximation_boxplots.py  benchmark.py  benchmark_approx.py  borda_heuristic.c  copeland.c  exact_benchmark_runtime.py  kemeny  kemeny.c  kemeny.h  kemeny_bruteforce.c  kemeny_exact.c  main.c  main.py  output.txt  rankedpairs.c  ranksfile.h  votes.txt
legacy c code/: copeland.c  generate_votes  generate_votes.c  kemeny  kemeny.c  kemeny_angle  (+6 more)
source/: CMakeCache.txt  CMakeLists.txt  EfficientSet.hpp  Makefile  SubsetIterator.hpp  candidatesset.cpp  candidatesset.hpp  cmake_install.cmake  errors.hpp  jobmanagement.cpp  jobmanagement.hpp  jobtyps.hpp  kconsens_instance.cpp  kconsens_instance.hpp  kconsens_instance_advancedsearchtree.cpp  kconsens_instance_advancedsearchtree.hpp  kconsens_instance_approx_pickpermrand.cpp  kconsens_instance_approx_pickpermrand.hpp  kconsens_instance_bycan.cpp  kconsens_instance_bycan.hpp  kconsens_instance_bycand.cpp  kconsens_instance_bycand.hpp  kconsens_instance_bykemX.cpp  kconsens_instance_bykemX.hpp  kconsens_instance_candidate_relations_based.cpp  kconsens_instance_candidate_relations_based.hpp  kconsens_instance_charon_hudry.cpp  kconsens_instance_charon_hudry.hpp  kconsens_instance_cplex.cpp  kconsens_instance_cplex.hpp  kconsens_instance_dirtypairs_based.cpp  kconsens_instance_dirtypairs_based.hpp  kconsens_instance_glpk.cpp  kconsens_instance_glpk.hpp  kconsens_instance_gurobi.cpp  kconsens_instance_gurobi.hpp  kemtyps.cpp  kemtyps.hpp  main.cpp  permutationmanagement.cpp  (+11 more)
(+9 files in other folders)
